[gd_scene load_steps=6 format=2]

[ext_resource path="res://main_page/tool_bar/home.png" type="Texture" id=1]
[ext_resource path="res://main_page/tool_bar/gallery.png" type="Texture" id=2]
[ext_resource path="res://main_page/tool_bar/lore.png" type="Texture" id=3]
[ext_resource path="res://main_page/tool_bar/about.png" type="Texture" id=4]
[ext_resource path="res://main_page/ToolBar.gd" type="Script" id=5]

[node name="ToolBar" type="MarginContainer"]
margin_left = 1169.0
margin_right = 1920.0
margin_bottom = 159.0
size_flags_horizontal = 10
custom_constants/margin_right = 125
custom_constants/margin_top = 60
custom_constants/margin_bottom = 40
script = ExtResource( 5 )

[node name="BtnBox" type="HBoxContainer" parent="."]
unique_name_in_owner = true
margin_top = 60.0
margin_right = 626.0
margin_bottom = 119.0
size_flags_horizontal = 8
custom_constants/separation = 70

[node name="HomeBtn" type="TextureButton" parent="BtnBox"]
unique_name_in_owner = true
margin_right = 80.0
margin_bottom = 59.0
rect_min_size = Vector2( 80, 59 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="LoreBtn" type="TextureButton" parent="BtnBox"]
unique_name_in_owner = true
margin_left = 150.0
margin_right = 231.0
margin_bottom = 59.0
rect_min_size = Vector2( 81, 59 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="GalleryBtn" type="TextureButton" parent="BtnBox"]
unique_name_in_owner = true
margin_left = 301.0
margin_right = 451.0
margin_bottom = 59.0
rect_min_size = Vector2( 150, 59 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="AboutBtn" type="TextureButton" parent="BtnBox"]
unique_name_in_owner = true
margin_left = 521.0
margin_right = 626.0
margin_bottom = 59.0
rect_min_size = Vector2( 105, 59 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
